# lfss

./: .gitignore  Makefile  Readme.md  collect_static.py  package.json  pyproject.toml  requirements.txt  run_test.sh  run_tests.sh
.github/workflows/: deploy.yml
cli/: serve.py  user.py
docs/: Client.md  Development.md  Enviroment_variables.md  Known_issues.md  Permission.md  Webdav.md  _index.md  _known-issues.md  changelog.md  changelogs.md  client-intro.md  commands.md  environment-variables.md  getting-started.md  index.md  lfssdir.md  permission.md  server-intro.md  start-on-boot.md  userman.md  virtual-user.md
docs/.vitepress/: config.mts
frontend/: api.js  api.ts  base.css  edit.css  edit.html  edit.js  index.html  info.css  info.js  login.css  login.js  package.json  popup.css  popup.js  scripts.js  state.js  styles.css  thumb.css  thumb.js  utils.js  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  style.css  utils.ts
frontend/src/components/: Layout.vue
frontend/src/router/: index.ts
frontend/src/store/: logs.ts  preferences.ts  user.ts
frontend/src/views/: Dashboard.vue  Editor.vue  Files.vue  Login.vue  Logs.vue  UserManagement.vue
frontend_v2/: package.json  tsconfig.app.json  tsconfig.json
frontend_v2/src/: api.ts  utils.ts
frontend_v2/src/components/: Layout.vue  UserManagement.vue
frontend_v2/src/i18n/: index.ts
frontend_v2/src/router/: index.ts
frontend_v2/src/store/: logs.ts  user.ts
frontend_v2/src/views/: Dashboard.vue  Files.vue  Login.vue  Logs.vue  (+2 more)
fss/cli/: serve.py
fss/src/: database.py  server.py
lfss/: __init__.py
lfss/api/: __init__.py  bundle.py  connector.py
lfss/cli/: __init__.py  balance.py  cli.py  cli_lib.py  log.py  panel.py  serve.py  systemd.py  user.py  vacuum.py
lfss/client/: __init__.py  api.py
lfss/eng/: config.py  connection_pool.py  database.py  database_conn.py  datatype.py  dir_config.py  error.py  log.py  permission.py  request_log.py  stat.py  thumb.py  typing_helpers.py  userman.py  utils.py
lfss/sql/: init.sql  pragma.sql
lfss/src/: bounded_pool.py  config.py  connection_pool.py  database.py  datatype.py  error.py  log.py  server.py  stat.py  thumb.py  utils.py
lfss/svc/: app.py  app_base.py  app_dav.py  app_impl.py  app_native.py  app_native_metric.py  app_native_user.py  common_impl.py  request_log.py
lss/src/: config.py  database.py
storage_service/: config.py  database.py  log.py  server.py  utils.py
test/: a.py  config.py  start_server.py  stress.py  stress_read.py  stress_write.py  upload_dir.py
test/cases/: common.py  test_01_basic.py  test_02_concurrent.py  test_03_api_wrap.py  test_05_storage_exceed.py  test_06_range_request.py  test_07_allies.py  test_08_move.py  test_09_copy.py  test_1.py  test_10_get_multiple.py  test_11_user_del.py  test_12_user_man.py  test_13_dirconfig.py  test_14_virtual_user.py  test_15_mime_type.py  test_1_basic.py  test_2_concurrent.py  test_3_api_wrap.py  test_4_pathlist.py  test_5_storage_exceed.py  test_6_range_request.py  test_7_alias.py  test_7_allies.py  test_9_copy.py  test_dav0_basic.py
(+20 files in other folders)
