[tool.poetry]
name = "lfss"
version = "0.7.2"
description = "Lightweight file storage service"
authors = ["li, mengxun <limengxun45@outlook.com>"]
readme = "Readme.md"
homepage = "https://github.com/MenxLi/lfss"
repository = "https://github.com/MenxLi/lfss"
include = ["Readme.md", "docs/*", "frontend/*", "lfss/sql/*"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "0.*"
aiosqlite = "0.*"
aiofiles = "23.*"
mimesniff = "1.*"

[tool.poetry.scripts]
lfss-serve = "lfss.cli.serve:main"
lfss-user = "lfss.cli.user:main"
lfss-panel = "lfss.cli.panel:main"
lfss-cli = "lfss.cli.cli:main"
lfss-balance = "lfss.cli.balance:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"