[tool.poetry]
name = "lfss"
version = "0.14.1"
description = "Lite file storage service"
authors = ["Li, Mengxun <mengxunli@whu.edu.cn>"]
readme = "Readme.md"
homepage = "https://github.com/MenxLi/lfss"
repository = "https://github.com/MenxLi/lfss"
include = ["Readme.md", "docs/.vitepress/dist/*", "frontend/*", "lfss/sql/*"]

[tool.poetry.dependencies]
python = ">=3.10"   # PEP-622
requests = "2.*"
aiosqlite = {"version" = "0.*", "optional" = true}
aiofiles = {"version" = "24.*", "optional" = true}
mimesniff = {"version" = "1.*", "optional" = true}
stream-zip = {"version" = "0.*", "optional" = true}
pillow = {"version" = "*", "optional" = true}
rich = {"version" = "*", "optional" = true}
fastapi = {"version" = "0.*", "optional" = true, "extras" = ["standard"]}

[tool.poetry.extras]
all = ["aiosqlite", "aiofiles", "mimesniff", "fastapi", "stream-zip", "pillow", "rich"]

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-html = "*"
webdavclient3 = "*"

[tool.poetry.scripts]
lfss-serve = "lfss.cli.serve:main"
lfss-user = "lfss.cli.user:main"
lfss-panel = "lfss.cli.panel:main"
lfss-vacuum = "lfss.cli.vacuum:main"
lfss-balance = "lfss.cli.balance:main"
lfss-log = "lfss.cli.log:main"
lfss-cli = "lfss.cli.cli:main"
lfss = "lfss.cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"